Replace deprecated calls to IndexView methods